# Mirrow

./: .gitignore  CMakeLists.txt  README.md
include/dynamic/: any.hpp  enum_type.hpp  register.hpp  type.hpp  type_info.hpp
include/sre/: sre.hpp
include/util/: function_traits.hpp  type_list.hpp  variable_tarits.hpp
src/: variable_traits.cpp
src/dynamic/: any.cpp  enum_type.cpp  register.cpp  type.cpp
src/util/: test.cpp
test/: CMakeLists.txt
test/dynamic/: CMakeLists.txt  any.cpp  object.cpp  register.cpp
test/sre/: CMakeLists.txt  sre.cpp
test/utils/: CMakeLists.txt  variable_traits.cpp
